# HoloDub

./: .dockerignore  .env.example  .env.production.example  .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh-CN.md  SECURITY.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  go.mod  go.sum
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
cmd/api/: main.go
cmd/chapterize-baseline/: main.go
cmd/chapterize-bench/: judge.go  main.go  report.go  runner.go
cmd/migrate-output/: main.go  main_test.go
cmd/worker/: main.go
config/: model-manifest.example.json
data/: diag_asr.py  test_asr_boundary.py
docker/: go.Dockerfile  ml.Dockerfile  precompile_bigvgan.py
docs/: openapi.yaml
docs/chapter2-drift-fix/: pr3-rerun-playbook.md
docs/observability/: README.md  grafana-dashboard.json  prometheus-rules.yaml  prometheus-scrape.yaml
docs/opt-201/: rollout.md
docs/opt-202/: rollout.md
docs/opt-204/: rollout.md
docs/opt-403/: baseline-opt403-79min.json  opt403-backfill-dry-run.json  validation-matrix.md
docs/opt-405/: bench-README.md
docs/production/: real-backend-rollout.md  release-runbook.md  scale-roadmap.md
docs/quality-mainline-q/: pr14-regression-baselines.md
docs/roadmap/: optimization-roadmap.md
internal/agents/: dubbing_tools.go  fake_tools_test.go  segment_agent.go  segment_agent_ensemble_test.go  segment_agent_test.go  split.go  split_test.go  types.go
internal/chapterize/: algo.go  algo_test.go  llm_apply.go  llm_apply_test.go
internal/config/: config.go  config_chapterize_test.go
internal/episode/: chapters_manifest.go  chapters_manifest_test.go
internal/http/: middleware.go  response.go  router.go  router_episode_downloads.go  router_episode_downloads_helpers_test.go  router_episode_downloads_test.go  router_segments.go  router_segments_test.go
internal/httpx/: error.go  error_test.go  extract.go  retry.go
internal/llm/: bench.go  chapter_judge.go  chapter_judge_test.go  chapter_review.go  chapter_review_test.go  client.go  client_test.go  dubbing_plan.go  (+11 more)
migrations/: 000_initial.sql  003_segment_review.sql  004_judge_score.sql  005_episodes.sql  006_episode_pipeline.sql  007_chapter_metadata.sql  008_llm_chapters.sql  009_chapter_judge_score.sql  010_rework_attempts.sql  011_segments_split.sql  011_segments_split_down.sql  012_segment_dubbing_meta.sql  012_segment_dubbing_meta_down.sql  README.md
ml_service/: README.md  pyproject.toml
ml_service/app/: __init__.py  config.py  main.py  models.py  observability.py  runtime.py  storage.py
ml_service/app/adapters/: __init__.py  asr.py  media.py  tts.py  vad.py
ml_service/app/routes/: __init__.py  admin.py  asr.py  health.py  media.py  tts.py
ml_service/app/services/: __init__.py  gpu_guard.py  model_manifest.py  model_registry.py
ml_service/tests/: test_app.py  test_model_registry.py  test_splitter.py  test_transcribe_window.py  test_tts_prosody.py
scripts/: backup.ps1  episode_judge.ps1  hot-reload.ps1  opt201-diff-jobs.ps1  restore.ps1
tests/: smoke.ps1
ui/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
(+172 files in other folders)
